hphp/test/zend/good/ext/mbstring/tests/mb_encode_numericentity.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('mbstring')) die('skip mbstring not enabled');
function_exists('mb_encode_mimeheader') || die("skip mb_encode_mimeheader() is not available in this build");
}
