hphp/test/zend/bad/ext/json/tests/pass001.1.php.skipif
<?php
  if (!extension_loaded('json')) die('skip: json extension not available');
  if (PHP_INT_SIZE != 4) die("skip this test is for 32bit platform only");
?>